--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "gulp": "^3.8.10",
     "gulp-connect": "^2.2.0",
     "gulp-webpack": "^1.2.0",
-    "mocha-loader": "^0.7.1",
+    "mocha": "2.0.1",
+    "mocha-loader": "0.7.1",
     "raw-loader": "^0.5.1",
     "simple-mock": "^0.2.9",
     "webpack": "^1.5.3"
