[Dev] Update Gulp

--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.8.0",
     "del": "^1.1.1",
-    "gulp": "^3.8.10",
-    "gulp-connect": "^2.2.0",
-    "gulp-webpack": "^1.2.0",
+    "gulp": "4.0.2",
+    "gulp-connect": "5.7.0",
+    "gulp-webpack": "1.5.0",
     "mocha": "2.0.1",
     "mocha-loader": "0.7.1",
     "raw-loader": "^0.5.1",
